<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".views.app.ProductsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:id="@+id/linearArea"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/allProductsList"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="horizontal"
        android:background="@drawable/background_search"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <SearchView
            android:id="@+id/searchView"
            android:layout_width="0dp"
            android:layout_weight="4"
            android:queryHint="@string/search"
            android:layout_marginStart="16dp"
            android:layout_marginVertical="10dp"
            android:layout_height="wrap_content"/>

        <ImageView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="16dp"
            android:background="@color/teal_700"
            android:layout_marginVertical="10dp"
            android:layout_gravity="center"
            android:contentDescription="@string/filter_products"
            android:id="@+id/filterProductsImage"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:src="@drawable/ic_baseline_filter_list_24" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/allProductsList"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:spanCount="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearArea" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionAddProduct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:clickable="true"
        android:focusable="true"
        android:contentDescription="@string/add_product"
        android:src="@drawable/ic_baseline_add_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/allProductsList" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:contentDescription="@string/app_name"
        android:id="@+id/idOnlineImage"
        android:layout_width="0dp"
        android:visibility="gone"
        android:layout_height="0dp"
        android:src="@drawable/ic_baseline_wifi_off_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/linearArea" />

    <ImageView
        android:id="@+id/addNewProductImage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_baseline_add_shopping_cart_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearArea" />

</androidx.constraintlayout.widget.ConstraintLayout>